# bucket

./: Cargo.toml  README.md  dfx.json
example/: Cargo.toml  README.md  example.did  storage.did
example/src/: main.rs
src/bucket/: Cargo.toml
src/bucket/src/: kv.rs  layout.rs  lib.rs  stable.rs  types.rs
src/kv/: Cargo.toml
src/kv/src/: kv.rs  layout.rs  lib.rs  stable.rs  types.rs
src/storage/: Cargo.toml  storage.did
src/storage/src/: bucket.rs  main.rs
